testsuite/good/observers/test_two_subscribers/TrafficController.flux
type TrafficController publishes TrafficEvent {
   void fireEvent();
}
methods {
   void fireEvent() {
      publish TrafficEvent.new();
   }
}