testsuite/bad/ImmutablePublisher.flux
immutable type ImmutablePublisher publishes Object {
   void method();
}